--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,9 +20,10 @@ h1#h1-titulo-1{
 
 h1#h1-titulo-2{
   font-family: var(--f-titulo2);
-  text-decoration: underline;
+  /*text-decoration: underline;
   text-decoration-style: dashed;
-  text-decoration-color: var(--c-vermelho-claro);
+  text-decoration-color: var(--c-vermelho-claro);*/
+  color: var(--c-vermelho-claro);
   top: -40px;
 }
 
@@ -36,10 +37,19 @@ h1#h1-titulo-2{
 
 #cont-grid-links a{
   background-color: var(--c-azul-claro-transp);
+  color: var(--c-roxo-escuro);
   width: 100%;
   height: 30vh;
   border: 1px solid var(--c-azul-claro);
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+#cont-grid-links a:visited{
+  color: var(--c-roxo-escuro);
 }
 
 #cont-grid-links a:hover{
