--- a/assets/css/est-conteiner.css
+++ b/assets/css/est-conteiner.css
@@ -1,10 +1,9 @@
 @import 'personalizacao.css';
 
 #div-vis #conteiner{
-  background-color: #f5f5f5;
+  background-color: white;
   width: 300px;
   height: 300px;
-  margin: auto;
   border: 2px dashed #320777;
   border-radius: 10px;
 }
