--- a/assets/css/personalizacao.css
+++ b/assets/css/personalizacao.css
@@ -2,47 +2,74 @@
 
 .titulo-princ{
   color: var(--c-vermelho-claro);
+  font-size: 45px;
   font-family: var(--f-titulo2);
   font-weight: normal;
   position: relative;
-  top: 5vh;
+  top: 3vh;
+}
+
+input[type='textbox']{
+  color: var(--c-roxo-escuro);
+  font-family: var(--f-normal);
+  font-size: 17px;
+  padding: 7px 15px;
+  border: 1px solid var(--c-cinza-medio);
+  border-radius: 25px;
+  outline: none;
+}
+
+input[type='textbox']:focus{
+  border-color: var(--c-azul-medio);
+  border-width: 2px;
+}
+
+.col-left{
+  left: 7vw;
+  position: absolute;
+}
+
+.col-right{
+  right: 7vw;
+  position: absolute;
 }
 
 #sec-princ{
   width: 100%;
+  height: 60vh;
   position: relative;
-  top: 2vh;
+  top: 1vh;
   left: 50%;
   transform: translateX(-50%);
 }
 
-#div-grid{
-  width: 80vw;
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 5vw;
-}
-
-#id-conteiner{
-  position: relative;
-  left: 7vw;
-}
-
-#id-conteiner::before{
-  content: '';
-  background-color: red;
-  color: var(--c-amarelo-claro);
-  font-size: 20px;
-  width: 20px;
-  height: 20px;
-  display: block;
-}
-
 #div-vis{
-  background-color: var(--c-back);
+  background-color: #fdfdfd;
   width: 100%;
-  height: fit-content;
+  height: 100%;
   padding: 5vh 0;
-  border: 1px solid var(--c-cinza-claro)
+  border: 1px solid var(--c-cinza-claro);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+#div-id{
+  position: absolute;
+  top: -3.5vh;
+}
+
+#div-id>*{
+  display: inline;
+}
+
+#div-id p{
+  color: var(--c-vermelho-claro);
+  font-family: var(--f-titulo2);
+  font-size: 30px;
+}
+
+#id::before{
+  content: 'aaaa';
+}
+
