--- a/assets/css/personalizacao.css
+++ b/assets/css/personalizacao.css
@@ -171,7 +171,7 @@ h3{
   padding: 20px;
 }
 
-.div-num-code p{
+.div-num-code span{
   color: var(--c-code-back2);
   margin: 0 auto;
   padding: 3px 0;
@@ -181,12 +181,9 @@ h3{
   user-select: none;
 }
 
-.div-tag-code{
-  padding: 20px 0;
-}
-
-.div-tag-code code{
+.code-bloco{
   font-family: var(--f-mono);
-  padding: 3px 0;
+  line-height: 30px;
   display: block;
+  padding: 20px 0;
 }
