--- a/assets/css/est-conteiner.css
+++ b/assets/css/est-conteiner.css
@@ -5,6 +5,6 @@
   width: 300px;
   height: 300px;
   border-width: 2px;
-  border-color: #6f16ff;
+  border-color: #320777;
   border-radius: 10px;
 }
