--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -14,7 +14,7 @@
   --c-rosa-claro: #ffcbee;
   --c-vermelho-claro: #ff6f8e;
   --c-amarelo-claro: #fffd9f;
-  --c-amarelo: #ffeb3b;
+  --c-amarelo: #fffc3b;
   --c-verde-claro: #7cffc2;
   --c-turq-claro: #5efff7;
 
