--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -20,6 +20,7 @@
 
   --c-back: white;
   --c-code-back1: #093c66;
+  --c-code-back1-transp: #093c66be;
   --c-code-back2: #6cc5e9;
 
   --f-titulo: 'Outfit', sans-serif;
