--- a/assets/css/personalizacao.css
+++ b/assets/css/personalizacao.css
@@ -1,14 +1,5 @@
 @import 'principal.css';
 
-.titulo-princ{
-  color: var(--c-vermelho-claro);
-  font-size: 42px;
-  font-family: var(--f-titulo2);
-  font-weight: normal;
-  position: relative;
-  top: 3vh;
-}
-
 #sec-princ{
   width: 100%;
   height: 70vh;
@@ -294,7 +285,8 @@ input, select, .div-cbx, select option{
 .div-num-code span{
   color: var(--c-code-back2);
   margin: 0 auto;
-  padding: 3px 0;
+  padding: 5px 0;
+  display: block;
   -webkit-user-select: none;  
   -moz-user-select: none;    
   -ms-user-select: none;      
